brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Jogador__c/Jogador__c.object-meta.xml
<CustomObject>
    <label>Jogador</label>
    <nameField>
        <label>Nome de Jogador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jogadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>