brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Jogador__c/fields/Data_da_Morte__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Morte__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Data da Morte</label>
    <type>Date</type>
</CustomField>