brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Jogador__c/fields/Eliminado__c.field-meta.xml
<CustomField>
    <fullName>Eliminado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eliminado</label>
    <type>Checkbox</type>
</CustomField>