brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Jogador__c/fields/Forca__c.field-meta.xml
<CustomField>
    <fullName>Forca__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Força</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>