brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Jogador__c/fields/Numeracao__c.field-meta.xml
<CustomField>
    <fullName>Numeracao__c</fullName>
    <displayFormat>Jogador-{000}</displayFormat>
    <label>Numeração</label>
    <type>AutoNumber</type>
</CustomField>