brave-goat-7k5w89-dev-ed.my.salesforce.com/force-app/main/default/objects/Jogador__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Numeracao__c</columns>
    <columns>Forca__c</columns>
    <columns>Velocidade__c</columns>
    <columns>Inteligencia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eliminado__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Tudo</label>
</ListView>